Fixed view bug for radios on mobile

--- a/src/styles/components/formCheckout.scss
+++ b/src/styles/components/formCheckout.scss
@@ -109,7 +109,7 @@
             text-transform: lowercase;
           }
           input {
-            transform: scale(1.5);
+            transform: scale(1);
             margin: 0;
             margin-right: 1rem;
             width: initial;
